--- a/src/components/Profile/TeacherDataItem/TeacherDataItem.module.scss
+++ b/src/components/Profile/TeacherDataItem/TeacherDataItem.module.scss
@@ -3,6 +3,7 @@
     grid-template-columns: 60% 20% auto;
     column-gap: 2vh;
     width: 100%;
+    height: 4vh;
 }
 
 .field {
